syntax = "proto3";
package nti.nti;

option go_package = "nti/x/nti/types";

message NftTransferStatusDetail {
  
  int32 srcChain = 1; 
  string srcAddr = 2; 
  int32 destChain = 3; 
  string destAddr = 4; 
  int32 status = 5; 
  string transactionHash = 6; 
  int32 transferredAt = 7; 
  int32 reservedAt = 8; 
}
